# vdf-zkp

./: Cargo.toml  README.md  rustfmt.toml
parameters/t_1048576/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_131072/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_2048/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_262144/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_32768/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_524288/: result.txt  vdf_zkp_vdf_parameter.data
parameters/t_8192/: result.txt  vdf_zkp_vdf_parameter.data
src/: bignat.rs  bit.rs  gadget.rs  group.rs  lazy.rs  lib.rs  mimc.rs  num.rs  poly.rs  rsa_set.rs  test.rs  vdf.rs  wesolowski.rs
